Added autoimport scss files, optimized class names at the top of the pages

--- a/src/components/booking-room-card/booking-room-card.scss
+++ b/src/components/booking-room-card/booking-room-card.scss
@@ -1,7 +1,4 @@
-@import '../dropdown/dropdown.scss';
-@import '../date-dropdown/date-dropdown.scss';
-@import '../calendar/calendar.scss';
-@import '../submit-button/submit-button.scss';
+@import '../../scss/variables.scss';
 
 .booking-room-card {
   background-color: white;
