--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -1,4 +1,5 @@
 @import '~air-datepicker/dist/css/datepicker.css';
+@import '../../scss/variables.scss';
 
 .datepicker {
   border: 1px solid $color-main-25;
