--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,5 +1,4 @@
-@import '../toxin-logo/toxin-logo.scss';
-@import '../text-fields/text-fields.scss';
+@import '../../scss/variables.scss';
 
 .footer {
   width: 100%;
