--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,4 @@
-@import '../toxin-logo/toxin-logo.scss';
-@import '../button/button.scss';
+@import '../../scss/variables.scss';
 
 .header {
   width: 100%;
