--- a/src/components/sign-in-card/sign-in-card.scss
+++ b/src/components/sign-in-card/sign-in-card.scss
@@ -1,6 +1,4 @@
-@import '../text-fields/text-fields.scss';
-@import '../submit-button/submit-button.scss';
-@import '../button/button.scss';
+@import '../../scss/variables.scss';
 
 .sign-in-card {
   background-color: white;
