--- a/src/components/sign-up-card/sign-up-card.scss
+++ b/src/components/sign-up-card/sign-up-card.scss
@@ -1,8 +1,4 @@
-@import '../text-fields/text-fields.scss';
-@import '../radio-button/radio-button.scss';
-@import '../toggle/toggle.scss';
-@import '../submit-button/submit-button.scss';
-@import '../button/button.scss';
+@import '../../scss/variables.scss';
 
 .sign-up-card {
   background-color: white;
