--- a/src/components/text-fields/text-fields.scss
+++ b/src/components/text-fields/text-fields.scss
@@ -1,3 +1,5 @@
+@import '../../scss/variables.scss';
+
 .text-field,
 .subscription-text-field,
 .masked-text-field {
@@ -31,7 +33,6 @@
     border: none;
     cursor: pointer;
     &-background {
-      // белая подложка под стрелку
       background-color: white;
       position: absolute;
       top: 1px;
