--- a/src/pages/UI-kit/Form-Elements/form-elements.scss
+++ b/src/pages/UI-kit/Form-Elements/form-elements.scss
@@ -1,50 +1,27 @@
-@import '../../../scss/fonts.scss';
 @import '../../../scss/variables.scss';
-@import '../../../components/logo/logo.scss';
-@import '../../../components/text-fields/text-fields.scss';
-@import '../../../components/abouts-room/abouts-room.scss';
-@import '../../../components/checkbox/checkbox.scss';
-@import '../../../components/expandable-checkbox/expandable-checkbox.scss';
-@import '../../../components/rate-button/rate-button.scss';
-@import '../../../components/radio-button/radio-button.scss';
-@import '../../../components/toggle/toggle.scss';
-@import '../../../components/like-button/like-button.scss';
-@import '../../../components/button/button.scss';
-@import '../../../components/submit-button/submit-button.scss';
-@import '../../../components/pagination/pagination.scss';
-@import '../../../components/rich-checkbox/rich-checkbox.scss';
-@import '../../../components/bullet-list/bullet-list.scss';
-@import '../../../components/dropdown/dropdown.scss';
-@import '../../../components/date-dropdown/date-dropdown.scss';
-@import '../../../components/filter-date/filter-date.scss';
-@import '../../../components/calendar/calendar.scss';
-@import '../../../components/comment/comment.scss';
-@import '../../../components/range-slider/range-slider.scss';
 
 html {
   font-size: 16px;
   font-family: $font-main;
 }
 
-body {
+.form-elements {
   margin: 0;
-}
-.logo {
-  max-width: 1380px;
-  margin: 0 auto;
-  padding: 0 30px;
-  @media (max-width: 1440px) {
-    padding-left: 2.1vw;
+  &__logo {
+    max-width: 1380px;
+    margin: 0 auto;
+    padding: 0 30px;
+    @media (max-width: 1440px) {
+      padding-left: 2.1vw;
+    }
+    @media (max-width: 840px) {
+      display: none;
+    }
   }
-  &__wrapper {
+  &__wrapper_for-logo {
     position: absolute;
     top: 30px;
   }
-  @media (max-width: 840px) {
-    display: none;
-  }
-}
-.form-elements {
   &__content {
     max-width: 1160px;
     margin: 143px auto;
