--- a/src/pages/UI-kit/cards/cards.scss
+++ b/src/pages/UI-kit/cards/cards.scss
@@ -1,40 +1,29 @@
-@import '../../../scss/fonts.scss';
 @import '../../../scss/variables.scss';
-@import '../../../components/logo/logo.scss';
-@import '../../../components/search-room-card/search-room-card.scss';
-@import '../../../components/sign-up-card/sign-up-card.scss';
-@import '../../../components/sign-in-card/sign-in-card.scss';
-@import '../../../components/booking-room-card/booking-room-card.scss';
-@import '../../../components/rate-button/rate-button.scss';
-@import '../../../components/room-card/room-card.scss';
-@import '../../../components/calendar/calendar.scss';
 
 html {
   font-size: 16px;
   font-family: $font-main;
 }
 
-body {
+.cards {
   margin: 0;
   background: #f4f4f6;
-}
-.logo {
-  max-width: 1380px;
-  margin: 0 auto;
-  padding: 0 30px;
-  @media (max-width: 1440px) {
-    padding-left: 2.1vw;
+  &__logo {
+    max-width: 1380px;
+    margin: 0 auto;
+    padding: 0 30px;
+    @media (max-width: 1440px) {
+      padding-left: 2.1vw;
+    }
+    @media (max-width: 840px) {
+      display: none;
+    }
   }
-  &__wrapper{
+  &__wrapper_for-logo {
     position: absolute;
     top: 30px;
   }
-  @media (max-width: 840px) {
-    display: none;
-  }
-}
-.cards{
-  &__content{
+  &__content {
     max-width: 1160px;
     margin: 150px auto 140px;
     padding: 0 10px;
@@ -51,11 +40,11 @@ body {
       padding: 0;
     }
   }
-  &__column{
+  &__column {
     width: 380px;
     margin-right: 10px;
     margin-bottom: 40px;
-    &:last-child{
+    &:last-child {
       width: 320px;
       margin-right: 0;
       margin-bottom: 0;
@@ -69,14 +58,16 @@ body {
       margin-right: 0;
     }
   }
-  &__search-room-card, &__booking-room-card, &__calendar, &__room-card{
+  &__search-room-card,
+  &__booking-room-card,
+  &__calendar,
+  &__room-card {
     margin-bottom: 40px;
   }
-  &__calendar{
+  &__calendar {
     margin-bottom: 75px;
-
   }
-  &__room-card{
+  &__room-card {
     width: 270px;
   }
 }
