Transferred variables from variables.pug to each file where it use

--- a/src/components/sign-up-card/sign-up-card.pug
+++ b/src/components/sign-up-card/sign-up-card.pug
@@ -4,6 +4,8 @@ include ../toggle/toggle.pug
 include ../submit-button/submit-button.pug
 include ../button/button.pug
 
+- const radioButtons = [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
+
 mixin sign-up-card()
 
   .sign-up-card
