--- a/src/pages/UI-kit/Form-Elements/form-elements.pug
+++ b/src/pages/UI-kit/Form-Elements/form-elements.pug
@@ -1,4 +1,3 @@
-include ../../../pug/variables.pug
 include ../../../components/logo/logo.pug
 include ../../../components/text-fields/text-fields.pug
 include ../../../components/abouts-room/abouts-room.pug
@@ -18,6 +17,30 @@ include ../../../components/date-dropdown/date-dropdown.pug
 include ../../../components/filter-date/filter-date.pug
 include ../../../components/comment/comment.pug
 include ../../../components/range-slider/range-slider.pug
+
+-
+  const roomDetailsInFormEl = [{materIcon: "insert_emoticon", title: "Комфорт", description: "Шумопоглащающие стены"},
+                  {materIcon: "location_city", title: "Удобство", description: "Окно в каждой из спален"}]
+
+  const checkboxes = [{label: "Можно курить"},{label: "Можно с питомцами", isChecked: true},{label: "Можно пригласить гостей (до 10 человек)", isChecked: true}]
+
+  const checkboxesToList = [{label: "Завтрак"},{label: "Письменный стол", isChecked: true},{label: "Стул для кормления", isChecked: true},
+                              {label: "Кроватка", isChecked: true},{label: "Телевизор"},{label: "Шампунь"},{label: "Телевизор"},{label: "Шампунь"}]
+
+  const radioButtons = [{label: "Мужчина", isChecked: true},{label: "Женщина"}]
+
+  const richCheckboxes = [{label: "Широкий коридор", description: "Ширина коридора в номере не менее 91 см."},
+                          {label: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист и проводит до номера"}]
+  
+  const bulletList = ["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"]
+
+  const roomDropdown = [{name: "Спальни", nameForms: ["Спальня","Спальни","Спален"], value: "2", min: "0", max: "5"},
+                    {name: "Кровати", nameForms: ["Кровать","Кровати","Кроватей"], value: "2", min: "0", max: "5"},
+                    {name: "Ванные комнаты",  nameForms: ["Ванная комната","Ванных комнаты","Ванных комнат"], value: "0", min: "0", max: "5"}]
+
+  const dropdownMidInFormEl = [{name: "Взрослые", value: "0", min: "0", max: "3"},{name: "Дети", value: "0", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]
+
+  const dropdownRightInFormEl = [{name: "Взрослые", value: "2", min: "0", max: "3"},{name: "Дети", value: "1", min: "0", max: "3"},{name: "Младенцы", value: "0", min: "0", max: "3"}]                            
 
 doctype html
 html(lang="ru")
